--- a/app/src/main/res/layout/fragment_fragment_child_custom_activity.xml
+++ b/app/src/main/res/layout/fragment_fragment_child_custom_activity.xml
@@ -63,7 +63,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Tagged Kids :"
-                        android:textSize="16sp"
+                        android:textSize="12dp"
                         android:textColor="@color/colorPrimary" />
 
                     <TextView
@@ -74,7 +74,7 @@
                         android:layout_weight="1"
                         android:text="TextView"
                         android:ems="10"
-                        android:textSize="16sp"
+                        android:textSize="12dp"
                         android:textStyle="italic" />
                 </LinearLayout>
 
@@ -90,7 +90,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Activity Name :"
-                        android:textSize="16sp"
+                        android:textSize="12dp"
                         android:textColor="@color/colorPrimary" />
 
                     <EditText
@@ -115,7 +115,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Activity Details :"
-                        android:textSize="16sp"
+                        android:textSize="12dp"
                         android:textColor="@color/colorPrimary" />
 
                     <EditText
@@ -142,7 +142,7 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:text="What time? : "
-                        android:textSize="16sp"
+                        android:textSize="12dp"
                         android:textColor="@color/colorPrimary" />
 
                     <RadioGroup
@@ -183,7 +183,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Time : "
-                        android:textSize="16sp"
+                        android:textSize="12dp"
                         android:textColor="@color/colorPrimary" />
 
                     <EditText
