--- a/app/src/main/res/layout/fragment_note_activity.xml
+++ b/app/src/main/res/layout/fragment_note_activity.xml
@@ -52,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Your Note :"
+                android:textSize="12dp"
                 android:textColor="@color/colorPrimary"/>
 
             <EditText
