--- a/app/src/main/res/menu/child_feed_menu.xml
+++ b/app/src/main/res/menu/child_feed_menu.xml
@@ -3,12 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/btn_child_profile_edit"
+        android:id="@+id/btn_child_profile_view"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="Edit Profile"
+        android:title="View Profile"
         app:showAsAction="never" />
-
-    <item android:title="Share Child Code"
-        android:id="@+id/btn_share_child_code"/>
 
 </menu>
