Email Change Request

--- a/app/src/main/res/layout/fragment_photo_activity.xml
+++ b/app/src/main/res/layout/fragment_photo_activity.xml
@@ -104,19 +104,12 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_marginRight="20dp"
-                        android:text="Location :"
+                        android:text="(Tap to Upload)"
                         android:textSize="12dp"
                         android:textColor="@color/colorPrimary"
                         />
 
-                    <TextView
-                        android:id="@+id/Photo_locationTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:text="No photo selected"
-                        android:textStyle="italic" />
+
 
                 </LinearLayout>
 
