--- a/app/src/main/res/drawable/rounded_layout.xml
+++ b/app/src/main/res/drawable/rounded_layout.xml
@@ -3,5 +3,6 @@
     <solid android:color="#FFFFFF"/>
     <stroke android:width="3dp" android:color="#B1BCBE" />
     <corners android:radius="10dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+    <padding android:left="20dp" android:top="20dp" android:right="20dp"
+        android:bottom="20dp" />
 </shape>
