--- a/app/src/main/res/layout/fragment_parent_add_child.xml
+++ b/app/src/main/res/layout/fragment_parent_add_child.xml
@@ -1,29 +1,9 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/parent_add_child"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clickable="true"
-    android:background="?android:windowBackground"
-    tools:context=".ParentAddChild"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
-
-    <!-- TODO: Update blank fragment layout -->
-
-    <LinearLayout
-        android:layout_width="364dp"
-        android:layout_height="536dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/rounded"
-        android:orientation="vertical"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    android:background="@drawable/rounded_layout"
+    android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/textView5"
@@ -35,7 +15,6 @@
             android:textSize="15dp"
             android:layout_marginBottom="10dp"
             />
-
 
         <EditText
             android:id="@+id/childname"
@@ -82,6 +61,4 @@
             android:textColor="#ffffff"
             android:textSize="15dp" />
 
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
