--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,22 @@
         android:layout_marginTop="100dp"
          />
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/ic_shiningicon"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="180dp"
+        ></ImageView>
+
     <Button
         android:id="@+id/signinbutton"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_below="@id/welcome"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="380dp"
         android:background="@drawable/ic_btnfilled"
         android:text="Sign In"
         android:textAllCaps="false"
