--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/chango</item>
+        <item>@font/electrolize</item>
+        <item>@font/krona_one</item>
+        <item>@font/unlock</item>
     </array>
 </resources>
