Staff Layout Update

--- a/app/src/main/res/layout/fragment_parent_add_child.xml
+++ b/app/src/main/res/layout/fragment_parent_add_child.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="Please enter the child code provided by the teacher to add your child"
+            android:text="Please enter child name and upload picture"
             android:textAlignment="center"
             android:textSize="15dp"
             android:layout_marginBottom="10dp"
