--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,11 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/ic_shiningicon"
+        app:srcCompat="@drawable/ic_shiningiconnn"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="180dp"
         ></ImageView>
+
 
     <Button
         android:id="@+id/signinbutton"
