--- a/app/src/main/res/layout/content_parent.xml
+++ b/app/src/main/res/layout/content_parent.xml
@@ -29,13 +29,12 @@
         android:id="@+id/profile_parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="68dp"
         android:background="@drawable/ic_profileparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view"
-        app:layout_constraintVertical_bias="0.801">
+        app:layout_constraintEnd_toEndOf="@+id/add_child_parent"
+        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintStart_toStartOf="@+id/view_child_parent">
 
     </ImageButton>
 
