--- a/app/src/main/res/layout/fragment_photo_activity.xml
+++ b/app/src/main/res/layout/fragment_photo_activity.xml
@@ -86,6 +86,7 @@
                         android:id="@+id/Photo_image"
                         android:layout_width="270dp"
                         android:layout_height="270dp"
+                        android:background="@null"
                         android:layout_weight="1"
                         android:scaleType="fitCenter"
                         app:srcCompat="@drawable/ic_photo" />
