--- a/app/src/main/res/layout/fragment_staff_profile.xml
+++ b/app/src/main/res/layout/fragment_staff_profile.xml
@@ -43,38 +43,42 @@
         android:layout_marginStart="16dp"
         android:text="Name"
         android:textColor="#000000"
-        android:textSize="15dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/nameField"
-        app:layout_constraintEnd_toStartOf="@+id/nameField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nameField">
+        app:layout_constraintTop_toTopOf="@+id/nameField"
+        app:layout_constraintVertical_bias="0.433">
 
     </TextView>
 
+
     <ImageView
         android:id="@+id/nameField"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:background="@null"
         app:layout_constraintBottom_toTopOf="@+id/emailField"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.862"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.99"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_fieldblue" />
-
 
     <EditText
         android:id="@+id/nameEdit"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="25dp"
         android:background="@null"
         android:ems="10"
         android:gravity="center"
         android:inputType="textPersonName"
         android:text="Name"
-        android:textSize="12dp"
+        android:textSize="10dp"
         android:textColor="#7C7C7C"
         app:layout_constraintBottom_toBottomOf="@+id/nameField"
         app:layout_constraintEnd_toEndOf="@+id/nameField"
@@ -90,32 +94,36 @@
         android:layout_marginStart="16dp"
         android:text="Email"
         android:textColor="#000000"
-        android:textSize="15dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/emailField"
-        app:layout_constraintEnd_toStartOf="@+id/emailField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.064"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/emailField">
+        app:layout_constraintTop_toTopOf="@+id/emailField"
+        app:layout_constraintVertical_bias="0.433">
 
     </TextView>
 
     <ImageView
         android:id="@+id/emailField"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:background="@null"
         app:layout_constraintBottom_toTopOf="@+id/passwordField"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.862"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_fieldblue" />
 
     <EditText
         android:id="@+id/emailEdit"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="25dp"
         android:background="@null"
         android:ems="10"
-        android:textSize="12dp"
+        android:textSize="10dp"
         android:inputType="textPersonName"
         android:text="Email"
         android:gravity="center"
@@ -128,7 +136,6 @@
         app:layout_constraintVertical_bias="0.5" />
 
 
-
     <TextView
         android:id="@+id/passwordText"
         android:layout_width="wrap_content"
@@ -136,22 +143,24 @@
         android:layout_marginStart="16dp"
         android:text="Password"
         android:textColor="#000000"
-        android:textSize="15dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/passwordField"
-        app:layout_constraintEnd_toStartOf="@+id/passwordField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/passwordField">
+        app:layout_constraintTop_toTopOf="@+id/passwordField"
+        app:layout_constraintVertical_bias="0.5">
 
     </TextView>
 
     <ImageView
         android:id="@+id/passwordField"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.776"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.731"
@@ -159,7 +168,7 @@
 
     <EditText
         android:id="@+id/passwordEdit"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="25dp"
         android:background="@null"
         android:ems="10"
@@ -167,7 +176,7 @@
         android:text="Password"
         android:gravity="center"
         android:textColor="#7C7C7C"
-        android:textSize="12dp"
+        android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/passwordField"
         app:layout_constraintEnd_toEndOf="@+id/passwordField"
         app:layout_constraintHorizontal_bias="0.525"
