--- a/app/src/main/res/layout/fragment_parent_profile.xml
+++ b/app/src/main/res/layout/fragment_parent_profile.xml
@@ -20,11 +20,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.144" />
 
+
     <Button
         android:id="@+id/update"
         android:layout_width="200dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="60dp"
         android:background="@drawable/ic_btnfilledpink"
         android:text="Update"
         android:textColor="#ffffff"
@@ -41,31 +42,34 @@
         android:layout_marginStart="16dp"
         android:text="Name"
         android:textColor="#000000"
-        android:textSize="15dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/nameField"
-        app:layout_constraintEnd_toStartOf="@+id/nameField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/nameField">
+        app:layout_constraintTop_toTopOf="@+id/nameField"
+        app:layout_constraintVertical_bias="0.382">
 
     </TextView>
 
     <ImageView
         android:id="@+id/nameField"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:background="@null"
         app:layout_constraintBottom_toTopOf="@+id/emailField"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.841"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.99"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/ic_field" />
-
 
     <EditText
         android:id="@+id/nameEdit"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="25dp"
         android:background="@null"
         android:ems="10"
@@ -88,28 +92,32 @@
         android:layout_marginStart="16dp"
         android:text="Email"
         android:textColor="#000000"
-        android:textSize="15dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/emailField"
-        app:layout_constraintEnd_toStartOf="@+id/emailField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/emailField">
+        app:layout_constraintTop_toTopOf="@+id/emailField"
+        app:layout_constraintVertical_bias="0.382">
 
     </TextView>
 
     <ImageView
         android:id="@+id/emailField"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:background="@null"
         app:layout_constraintBottom_toTopOf="@+id/passwordField"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.841"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_field" />
 
     <EditText
         android:id="@+id/emailEdit"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="25dp"
         android:background="@null"
         android:ems="10"
@@ -126,7 +134,6 @@
         app:layout_constraintVertical_bias="0.5" />
 
 
-
     <TextView
         android:id="@+id/passwordText"
         android:layout_width="wrap_content"
@@ -134,22 +141,24 @@
         android:layout_marginStart="16dp"
         android:text="Password"
         android:textColor="#000000"
-        android:textSize="15dp"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/passwordField"
-        app:layout_constraintEnd_toStartOf="@+id/passwordField"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/passwordField">
+        app:layout_constraintTop_toTopOf="@+id/passwordField"
+        app:layout_constraintVertical_bias="0.4">
 
     </TextView>
 
     <ImageView
         android:id="@+id/passwordField"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.757"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.731"
@@ -157,7 +166,7 @@
 
     <EditText
         android:id="@+id/passwordEdit"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="25dp"
         android:background="@null"
         android:ems="10"
