--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,17 @@
         android:layout_marginTop="180dp"
         ></ImageView>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="270dp"
+        android:fontFamily="@font/electrolize"
+        android:layout_centerHorizontal="true"
+        android:paddingLeft="10dp"
+        android:text="Shining Star"
+        android:textColor="@color/white"
+        android:textSize="16dp" />
+
 
     <Button
         android:id="@+id/signinbutton"
